--- a/_media/asset.css
+++ b/_media/asset.css
@@ -1,447 +1,276 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: none !important;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar {
+  width: 3px !important;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+.cover-main img:first-of-type {
+  max-width: 364px;
+  width: 100%;
+}
+
+.sidebar-toggle div:first-of-type {
+  background-color: rgb(255, 255, 255, 0);
+}
+
+.sidebar-nav {
+  margin-top: 6px;
+}
+
+.sidebar-nav img:first-of-type {
+  max-width: 230px;
+}
+
+body .docsify-pagination-container {
+  margin-top: 50px;
+  border-top: solid 3px #f7f7f7;
+  font-weight: 600;
+}
+
+body .pagination-item-title {
+  color: #121212;
+  font-size: 18px;
+  transition: all 0.2s;
+  opacity: 1;
+  padding-left: 11px;
+  padding-right: 11px;
+}
+
+body .pagination-item-subtitle {
+  color: #adadad;
+  font-weight: 400;
+  text-transform: none;
+  transition: all 0.2s;
+  font-size: 14px;
+  opacity: 1;
+  padding-left: 11px;
+  padding-right: 11px;
+}
+
+body .pagination-item-label {
+  color: #121212;
+  margin-bottom: 8px;
+  transition: all 0.2s;
+  font-weight: 400;
+  font-size: 10px;
+  opacity: 1;
+}
+
+.pagination-item:last-child .pagination-item-label,
+.pagination-item:not(:last-child) a:hover .pagination-item-label {
+  opacity: 1;
+}
+
+.pagination-item a:hover .pagination-item-title {
+  text-decoration: none;
+  transition: all 0.2s;
+  color: #e01e5a;
+}
+
+.pagination-item:not(:last-child) a .pagination-item-label,
+.pagination-item:not(:last-child) a .pagination-item-subtitle,
+.pagination-item:not(:last-child) a .pagination-item-title {
+  opacity: 1;
+}
+
+.sidebar .search .input-wrap {
+  background-color: #121212;
+  border: none;
+}
+
+.sidebar .search {
+  margin-top: 0;
+}
+
+.sidebar .search input[type="search"]:focus,
+.sidebar .search input[type="search"] {
+  font-weight: 600;
+  color: #fff;
+  padding-left: 30px;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  box-shadow: none;
+  background-color: transparent;
+  background-image: none;
+}
+
+.sidebar .search .results-panel.show {
+  background-color: #181818;
+  margin-left: -25px;
+  margin-right: -25px;
+  padding-left: 31px;
+  padding-right: 25px;
+}
+
+.sidebar .search h2 {
+  color: #fff;
+  font-size: 14px;
+}
+
+.sidebar .search .matching-post p {
+  color: #888;
+  font-size: 14px;
+}
+
+.sidebar-nav li > a[href^="#/"]:not([href*="?id="]):only-child {
+  padding-left: 5px;
+}
+
+.sidebar-nav li > p {
+  margin-bottom: 5px;
+}
+
+.sidebar .search .matching-post {
+  border: solid 1px #252525;
+}
+
+.sidebar .search .matching-post:nth-child(1n) .search-keyword {
+  background-color: #9c3d98;
+}
+
+.sidebar .search .matching-post:nth-child(2n) .search-keyword {
+  background-color: #e01e5a;
+}
+
+.sidebar .search .matching-post:nth-child(3n) .search-keyword {
+  background-color: #f6b000;
+}
+
+.sidebar .search .matching-post:nth-child(4n) .search-keyword {
+  background-color: #02abd4;
+}
+
+.sidebar .search .matching-post:nth-child(5n) .search-keyword {
+  background-color: #00935e;
+}
+
+.search p.empty {
+  color: #fff;
+  /*font-weight: 600;*/
+  margin-top: 0;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  text-align: center;
+}
+
+.sidebar .search input[type="search"]::placeholder {
+  color: #fff;
+}
+
+.sidebar .search .search-keyword {
+  background-color: #00935e;
+  color: #fff;
+  font-weight: 600;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+.search .clear-button.show {
+  transition: all 0.2s;
+}
+
+.search .clear-button.show:hover {
+  transition: all 0.2s;
+  opacity: 0.8;
+}
+
+.cover-main a {
+  font-weight: 600;
+}
+
+.sidebar .search .clear-button svg circle {
+  transition: all 0.2s;
+  fill: #fff;
+}
+
+.sidebar .search .clear-button svg path {
+  stroke: #121212;
+}
+
+.markdown-section .warn {
+  border-color: #00c7f5;
+  background-color: #f4fafc;
+}
+
+.markdown-section .warn::before {
+  background-color: #00c7f5;
+}
+
+button:focus {
+  outline: none;
+}
+
+.docsify-tabs--classic .docsify-tabs__tab--active {
+  border-top: solid 4px #e01e5a;
+  box-shadow: none;
+  font-weight: 600;
+}
+
 :root {
-    --theme-color: #ff8211;
-    --theme-color-light: #fcaf6d;
-    --theme-color-dark: #e67411;
-    --theme-color-secondary: black;
-    --theme-color-secondary-dark: black;
-    --theme-color-secondary-light: white;
-  
-    --text-color-base: #2E2E46;
-    --text-color-secondary: #646473;
-    --text-color-tertiary: #81818E;
-  }
-  
-  
-  ::selection {
-    background: var(--theme-color-light);
-  }
-  
-  body {
-    font-size: 100%;
-    line-height: 1.5;
-    font-family: 'Source Sans Pro','Open Sans','Helvetica Neue',Arial,sans-serif;
-    color: var(--text-color-base);
-  }
-  
-  * {
-    text-decoration: none !important;
-  }
-  
-  a {
-    transition: all 0.3s linear;
-  }
-  
-  div.search {
-    border-bottom: 2px solid #787881;
-    border: none;
-    background-color: var(--theme-color-secondary-light);
-    padding: 0;
-  }
-  
-  .sidebar .search input {
-    background: none;
-    background-color: rgba(255,255,255,0.5);
-    transition: background-color 0.3s ease;
-  }
-  
-  .sidebar .search input:focus {
-    background-color: rgba(255,255,255,1);
-  }
-  
-  aside.sidebar {
-    border: none;
-    background-color: var(--theme-color-secondary);
-    color: #fff;
-  }
-  
-  .sidebar ul li a {
-    color: rgba(255,255,255,0.8);
-    color: var(--theme-color-light);
-    font-size: 1rem;
-  }
-  
-  .sidebar ul li.active>a {
-    border-width: 0.1rem;
-  }
-  
-  .sidebar ul li a:hover {
-    text-decoration: none;
-    color: rgba(255,255,255,1);
-  }
-  
-  .sidebar .sidebar-nav ul li.active>a {
-    color: #fff;
-    border-right: 0.2rem solid var(--theme-color-secondary-light,#29D0CA);
-  }
-  
-  .search .results-panel.show {
-    background-color: #05827E;
-    background-color: #fff;
-    color: #000;
-  }
-  
-  .sidebar .search .matching-post {
-    padding: 0;
-    border-bottom: 0.2rem solid #E4E4E6;
-  }
-  
-  .sidebar .search .matching-post:first-child {
-    border-top: 0.2rem solid #E4E4E6;
-  }
-  
-  .search a {
-    padding: 1rem;
-    display: block;
-    transition: background-color 0.3s ease;
-  }
-  
-  .search a:hover {
-    color: var(--theme-color-dark);
-  }
-  
-  .search p.empty {
-    margin: 0;
-    padding: 1rem;
-    background-color: #F1F1F2;
-  }
-  
-  .sidebar > h1 {
-    font-size: 2rem;
-  }
-  
-  .sidebar-logo {
-    display: block;
-    width: 4rem;
-    vertical-align: bottom;
-    line-height: 1.6;
-    height: 4rem;
-    margin: 0 auto;
-    filter: invert(1);
-  }
-  
-/****** Sidebar Toggle ******/
-.sidebar-toggle {
-    cursor: pointer;
-  }
-  
-  body .sidebar-toggle {
-    background: none;
-    top: 1.5rem;
-    left: calc(300px + 1.5rem);
-    cursor: pointer;
-    width: 1.5rem;
-    height: 1.5rem;
-    padding: 0;
-    transition: left 0.25s ease-out;
-  }
-  
-  body .sidebar-toggle span {
-    background-color: var(--theme-color);
-    height: 0.2rem;
-    width: 1.5rem;
-    position: absolute;
-    left: 0;
-    margin: 0;
-    transform-origin: 0;
-    border-radius: 1px;
-  }
-  
-  body.close .sidebar-toggle {
-    transition: left 0.25s ease-out;
-    width: 1.5rem;
-    height: 1.5rem;
-    left: 1.5rem;
-  }
-  
-  body.close .sidebar-toggle span {
-    transform-origin: center;
-  }
-  
-  body .sidebar-toggle span:nth-child(1) {
-    top: 0;
-  }
-  body .sidebar-toggle span:nth-child(2) {
-    top: 0.5rem;
-  }
-  body .sidebar-toggle span:nth-child(3) {
-    top: 1rem;
-  }
-  
-  .sidebar-toggle:hover {
-    opacity: 0.8;
-  }
-  .sidebar-toggle .sidebar-toggle-button:hover {
-    opacity: 1;
-  }
-  
-  @media screen and (max-width: 768px) {
-    body .sidebar-toggle {
-      left: 1rem;
-    }
-  
-    body.close .sidebar-toggle {
-      left: calc(300px + 1.5rem);
-    }
-  }
-  
-  
-  th {
-    text-align: left;
-  }
-  
-  .markdown-section blockquote {
-    margin: 1em 0;
-  }
-  
-  .markdown-section em,
-  .markdown-section blockquote {
-    color: var(--text-color-tertiary);
-  }
-  
-  .cover-main img {
-    max-width: 10rem;
-    max-height: 10rem;
-  }
-  
-  section.cover p {
-    line-height: inherit;
-  }
-  
-  section.cover .cover-main a {
-    font-weight: 600;
-  }
-  
-  section.cover .cover-main a::before {
-    display: none;
-  }
-  
-  section.cover .cover-main blockquote {
-    font-style: italic;
-    color: #868C91;
-  }
-  
-  section.cover.show div.cover-main > p a {
-    border-style: solid;
-    border-radius: 2rem;
-    box-sizing: border-box;
-    display: inline-block;
-    font-size: 1.05rem;
-    letter-spacing: .1rem;
-    margin: .5rem 1rem;
-    padding: .75em 2rem;
-    text-decoration: none;
-    transition: all .15s ease;
-  
-    border-width: 0.2rem;
-    color: var(--theme-color-secondary);
-    border-color: var(--theme-color-secondary);
-  }
-  
-  section.cover.show div.cover-main>p a:last-child {
-    background-color: var(--theme-color-secondary);
-    border-color: var(--theme-color-secondary);
-    color: #fff;
-  }
-  
-  section.cover.show div.cover-main>p a:hover {
-    color: var(--theme-color-secondary-dark);
-    border-color: var(--theme-color-secondary-dark);
-    opacity: 1;
-  }
-  
-  section.cover.show div.cover-main>p a:last-child:hover {
-    background-color: var(--theme-color-secondary-dark);
-    border-color: var(--theme-color-secondary-dark);
-    color: #fff;
-    opacity: 1;
-  }
-  
-  .anchor {
-    position: relative;
-  }
-  
-  .anchor::before {
-    content: '\1F449';
-    position: absolute;
-    top: 0;
-    left: -1.25em;
-    opacity: 0;
-    font-size: 0.875em;
-  }
-  
-  .anchor:hover::before {
-    opacity: 1;
-  }
-  
-  section.cover .cover-main {
-    margin: 20vh 20vw;
-  }
-  
-  .app-name-link {
-    white-space: nowrap;
-  }
-  
-  .app-sub-sidebar li:before {
-    display: none;
-  }
-  
-  .markdown-section pre,
-  .markdown-section pre > code {
-    background-color: #2E2E46;
-    color: rgba(255,255,255,0.75);
-    font-size: 1em;
-    line-height: 1.5;
-  }
-  
-  .markdown-section code {
-    display: inline-block;
-    font-family: 'Source Code Pro', monospace;
-  }
-  
-  .markdown-section pre {
-    padding: 2rem;
-  }
-  
-  .markdown-section pre > code {
-    padding: 0;
-  }
-  
-  .markdown-section hr {
-    border-bottom: 5px solid transparent;
-  }
-  
-  .token.punctuation {
-    color: #585967;
-  }
-  
-  .token.comment,
-  .token.block-comment,
-  .token.prolog,
-  .token.doctype,
-  .token.cdata{color:#999999;}
-  .token.property,
-  .token.number,
-  .token.function-name,
-  .token.constant,
-  .token.symbol,
-  .token.deleted{color:#5a9bcf;}.token.boolean{color:#ff8b50;}.token.tag{color:#fc929e;}.token.string{color:#8dc891;}.token.punctuation{color:#5FB3B3;}
-  .token.selector,
-  .token.char,
-  .token.builtin,
-  .token.inserted{color:#D8DEE9;}.token.function{color:#79b6f2;}
-  .token.operator,
-  .token.entity,
-  .token.url,
-  .token.variable{color:#d7deea;}.token.attr-value{color:#8dc891;}.token.keyword{color:#c5a5c5;}
-  
-  .lang-scss .token.variable {
-    color: #8dc891;
-  }
-  
-  .markdown-section ol, .markdown-section p, .markdown-section ul {
-    line-height: inherit;
-  }
-  
-  .markdown-section code {
-    color: inherit;
-    border-radius: 0;
-    font-size: 0.9em;
-    padding: 6px 10px;
-    /* color: #111; */
-  }
-  
-  .markdown-section table {
-    display: table;
-  }
-  
-  .markdown-section table tr {
-    border-width: 0.2rem 0;
-    border-style: solid;
-    border-color: #F1F1F2;
-  }
-  
-  .markdown-section table tr:nth-child(2n) {
-    background-color: transparent;
-  }
-  
-  .markdown-section table td,
-  .markdown-section table th {
-    border: none;
-    padding: 1.5rem 0.5rem;
-    text-align: left;
-  }
-  
-  .markdown-section table td p {
-    margin: 0;
-  }
-  
-  .markdown-section a {
-    text-decoration: none;
-    border-bottom: 0.1rem solid var(--theme-color-light);
-    transition: all 0.3s ease;
-  }
-  
-  .markdown-section a:hover {
-    border-color: var(--theme-color);
-    color: var(--theme-color-dark);
-  }
-  
-  
-  /* Badges */
-  .markdown-section > p:first-child > a {
-    border: none;
-  }
-  
-  .docsify-copy-code-button {
-    background: var(--theme-color);
-  }
-  
-  .sidebar::-webkit-scrollbar {
-    width:0;
-  }
-  
-  @media screen and (max-width: 768px) {
-    section.cover {
-      height: auto;
-    }
-    section.cover .cover-main {
-      margin: 0 5vw;
-    }
-    .cover-main img {
-      max-width: 100px;
-      max-height: 100px;
-    }
-  
-    body .sidebar-toggle { background-color: #fff; }
-    body.close .sidebar-toggle {
-      background-color: transparent;
-      padding: 1rem;
-    }
-  
-    .sidebar-toggle:hover span:nth-child(1) { transform:rotate(0); width:1.5rem; top:0.65rem; }
-    .sidebar-toggle:hover span:nth-child(2) { opacity: 1; transform:rotate(90deg); transform-origin: center; }
-    .sidebar-toggle:hover span:nth-child(3) { transform:rotate(0); width:1.5rem; top:0.65rem; }
-  
-    .close .sidebar-toggle:hover span:nth-child(1) { transform: rotate(45deg); width: 1.75rem; }
-    .close .sidebar-toggle:hover span:nth-child(2) { opacity: 0; }
-    .close .sidebar-toggle:hover span:nth-child(3) { transform: rotate(-45deg); width: 1.75rem; }
-  }
-  
-  @media screen and (min-width: 769px) {
-    .markdown-section {
-      max-width: 75rem;
-      padding: 1rem 3rem;
-    }
-  }
-  
-  @media (min-width: 1200px) {
-    body {
-      font-size: 112.5%;
-    }
-  }
-  
-  @media (min-width: 1400px) {
-    body {
-      font-size: 125%;
-    }
-  }
+  --cover-background-color: #121212;
+  --cover-background-image: url("https://raw.githubusercontent.com/raycharius/slack-block-builder/master/docs/resources/images/background.png");
+  --cover-button-border: 2px solid #00c7f5;
+  --cover-button-color: #00c7f5;
+  --cover-button-primary-background: #e01e5a;
+  --cover-button-primary-border: 1px solid #e01e5a;
+  --cover-color: #fff;
+  --base-font-family: "Lato", sans-serif;
+  --base-font-size: 16px;
+  --base-font-weight: 500;
+  --base-line-height: 1.7;
+  --heading-color: #121212;
+  --heading-h1-font-weight: 900;
+  --heading-h2-font-weight: 900;
+  --heading-h3-font-weight: 900;
+  --heading-h4-font-weight: 900;
+  --sidebar-background: #f6f6f6;
+  --sidebar-border-color: rgb(225, 225, 225, 0);
+  --sidebar-border-width: 0;
+  --sidebar-width: 18rem;
+  --table-head-border-color: transparent;
+  --table-cell-border-color: transparent;
+  --table-row-odd-background: #f6f6f6;
+  --table-cell-padding: 1em 0.5em;
+  --sidebar-nav-margin: 1.3rem 0 0;
+  --sidebar-nav-link-background-image: none;
+  --sidebar-nav-pagelink-background-image: none;
+  --sidebar-nav-link-color: #181818;
+  --sidebar-nav-link-color--hover: #e01e5a;
+  --sidebar-nav-link-text-decoration--hover: none;
+  --sidebar-nav-link-color--active: #e01e5a;
+  --sidebar-nav-link-border-color--active: #e01e5a;
+  --sidebar-toggle-offset-left: 12px;
+  --sidebar-toggle-offset-top: 8px;
+  --sidebar-toggle-icon-height: 18px;
+  --sidebar-toggle-icon-width: 25px;
+  --sidebar-toggle-icon-stroke-width: 3px;
+  --sidebar-toggle-icon-color: #121212;
+  --code-inline-color: #e01e5a;
+  --code-inline-background: rgb(248, 248, 248);
+  --code-inline-border-radius: 5px;
+  --link-color: #02abd4;
+  --link-text-decoration: none;
+  --code-theme-keyword: #e01e5a;
+  --code-theme-function: #9c3d98;
+  --code-theme-selector: #00935e;
+  --code-theme-operator: #f6b000;
+  --docsifytabs-border-color: #f7f7f7;
+  --docsifytabs-border-px: 2px;
+  --docsifytabs-border-radius-px: 5px;
+  --docsifytabs-margin: 3em 0;
+  --docsifytabs-tab-color--active: #121212;
+  --docsifytabs-tab-color: #878787;
+  --docsifytabs-tab-background: #f7f7f7;
+}
