Ajustes no tema

--- a/_media/asset.css
+++ b/_media/asset.css
@@ -1,8 +1,8 @@
-/* :root {
+:root {
   --sidebar-width: 35rem;
   --sidebar-padding: 0 25px 0 350px;
 }
 
 .sidebar+.content {
   margin-left: 10rem;
-} */
+} 
